--- a/ForgotPassword/index.html
+++ b/ForgotPassword/index.html
@@ -7,16 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <form onsubmit="login(event)">
-        <label for="email">Enter your email:</label>
-        <input type="email" name="email" required />
-        <input type="password" name="password" required />
-        <button>Login</button>
+    <form onsubmit="forgotpassword(event)">
+        <input type="email" name="email" required>
+        <button> Send Mail</button>
     </form>
-    <button onclick="forgotpassword()"> Forgot password</button>
-    <a href="../Signup/signup.html">New User - Signup Now</a>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="./login.js" ></script>
+    <script src="./index.js"></script>
+
 </body>
 </html>
