--- a/ExpenseTracker/index.html
+++ b/ExpenseTracker/index.html
@@ -21,9 +21,16 @@
         </select>
         <button>Add Expense</button>
     </form>
+    <div id="message"></div>
+    <button id="rzp-button1">Buy Premium</button>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <h1>
+        Expenses
+    </h1>
     <ul id='listOfExpenses'>
 
     </ul>
+    <ul id="leaderboard"></ul>
     <script src='./index.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js" integrity="sha512-bZS47S7sPOxkjU/4Bt0zrhEtWx0y0CRkhEp8IckzK+ltifIIE9EMIMTuT/mEzoIMewUINruDBIR/jJnbguonqQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
