--- a/Signup/signup.html
+++ b/Signup/signup.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <form onsubmit="signup(event)">
-        <label for="name">Enter your name:</label>
+        <label for="name">Enter name:</label>
         <input type="text" name="name" required />
-        <label for="email">Enter your email:</label>
+        <label for="email">Enter email:</label>
         <input type="email" name="email" required />
+        <label for="password">Enter password:</label>
         <input type="password" name="password" required />
         <button>Signup</button>
     </form>
