Local storage integrated

--- a/ExpenseTracker/index.html
+++ b/ExpenseTracker/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <form onsubmit="addNewExpense(event)">
+        <label for="orderId">Product ID:</label>
+        <input type="number" name="orderId" required> </input>
         <label for="expenseamount">Selling Price:</label>
         <input type="number" name="expenseamount" required> </input>
         <label for="description">Product Name:</label>
